# ngascout

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  cron.template  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.local.json
docs/superpowers/plans/: 2026-05-15-nga-watcher.md
docs/superpowers/specs/: 2026-05-15-nga-watcher-design.md
scripts/: entrypoint.sh
src/: __main__.py  archive_author.py  archive_thread.py  author_archive_store.py  config.py  main.py  nga.py  notify.py  store.py
src/core/: nga.py  notify.py  store.py
src/jobs/: archive_author.py  archive_thread.py  monitor.py
tests/: test_archive_author.py  test_archive_thread.py  test_author_archive_store.py  test_config.py  test_main.py  test_nga.py  test_notify.py  test_store.py
